button alignment fix

--- a/src/components/Carousel.scss
+++ b/src/components/Carousel.scss
@@ -5,6 +5,7 @@
     height: 548px;
     .carousel-inner {
         height: 100%;
+        background:black;
         .carousel-item {
             height: 100%;
             width: 100%;
@@ -73,7 +74,7 @@
                             }
 
                             max-height:300px;
-                            overflow:scroll;
+                            overflow-y:scroll;
                             margin-bottom:15px;
 
                         }
@@ -104,7 +105,7 @@
 
                             .btn-watch {
                                 color: white;
-                                transition: 0.3s all;
+                                transition: 0.3s all;                     
 
                                 &:hover {
                                     opacity: 0.8;
@@ -113,6 +114,7 @@
 
                             .btn-outline {
                                 background: none;
+                                margin-right:0;
                                 border: 1px solid rgba(255, 255, 255, .3);
                                 transition: 0.3s all;
 
